tests/ui/non_mod_in_mod.stderr
error: expected a module
 --> tests/ui/non_mod_in_mod.rs:3:5
  |
3 |     struct Bar;
  |     ^^^^^^^^^^^
